--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-<<<<<<< HEAD
-
-*.scssc
-
-assets/css/.sass-cache
-
-=======
-*.scssc
-assets/css/.sass-cache
->>>>>>> light
-assets/css/.sass-cache/*
+.DS_Store
+/site/accounts
+/site/cache
+/assets/avatars
+/thumbs/*
+.sass-cache
