--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,10 @@
 # rewrite rules
 <IfModule mod_rewrite.c>
 
+# redirect non-www to ww
+RewriteCond %{HTTP_HOST} ^madlentamm.de
+RewriteRule ^(.*)$ http://www.madlentamm.de/$1 [R=301,L]
+
 # enable awesome urls. i.e.:
 # http://yourdomain.com/about-us/team
 RewriteEngine on
@@ -43,3 +47,44 @@ RewriteRule ^(.*) index.php [L]
 # AddDefaultCharset UTF-8
 #
 # php_flag short_open_tag on
+
+
+<IfModule mod_expires.c>
+
+  ExpiresActive On
+
+  ExpiresDefault "access plus 1 years"
+
+  ExpiresByType text/html "access plus 10 minutes"
+  ExpiresByType text/css "access plus 1 week"
+  ExpiresByType text/javascript "access plus 1 week"
+  ExpiresByType text/plain "access plus 1 week"
+  ExpiresByType application/javascript "access plus 1 week"
+  ExpiresByType application/x-javascript "access plus 1 week"
+
+  ExpiresByType application/font-woff "access plus 1 year"
+  ExpiresByType image/svg+xml "access plus 1 month"
+  ExpiresByType image/jpeg "access plus 1 month"
+  ExpiresByType image/png "access plus 1 month"
+  ExpiresByType image/x-icon "access plus 1 year"
+
+  <filesmatch "\\.(ico|jpe?g|png|gif|swf)$">
+    Header set Cache-Control "max-age=2592000, public"
+  </filesmatch>
+  <filesmatch "\\.(css)$">
+    Header set Cache-Control "max-age=604800, public"
+  </filesmatch>
+  <filesmatch "\\.(js)$">
+    Header set Cache-Control "max-age=604800, private"
+  </filesmatch>
+
+</IfModule>
+
+
+# Deflate Compression by FileType
+<IfModule mod_deflate.c>
+  AddOutputFilterByType DEFLATE text/plain
+  AddOutputFilterByType DEFLATE text/html
+  AddOutputFilterByType DEFLATE text/javascript
+  AddOutputFilterByType DEFLATE image/x-icon
+</IfModule>
