--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+AddType  font/woff  .woff
+AddType  font/woff2 .woff2
+
 # Kirby .htaccess
 
 # rewrite rules
@@ -59,31 +62,19 @@ RewriteRule ^(.*) index.php [L]
 
   ExpiresActive On
 
-  ExpiresDefault "access plus 1 years"
-
   ExpiresByType text/html "access plus 10 minutes"
-  ExpiresByType text/css "access plus 1 week"
-  ExpiresByType text/javascript "access plus 1 week"
+
+  ExpiresByType text/css "access plus 1 year"
+  ExpiresByType text/javascript "access plus 1 year"
   ExpiresByType text/plain "access plus 1 week"
-  ExpiresByType application/javascript "access plus 1 week"
-  ExpiresByType application/x-javascript "access plus 1 week"
+  ExpiresByType application/javascript "access plus 1 year"
 
-  ExpiresByType application/font-woff "access plus 1 year"
-  ExpiresByType image/svg+xml "access plus 1 month"
-  ExpiresByType image/jpeg "access plus 1 month"
-  ExpiresByType image/png "access plus 1 month"
-  ExpiresByType image/x-icon "access plus 1 year"
-
-  <filesmatch "\\.(ico|jpe?g|png|gif|swf)$">
-    Header set Cache-Control "max-age=2592000, public"
-  </filesmatch>
-  <filesmatch "\\.(css)$">
-    Header set Cache-Control "max-age=604800, public"
-  </filesmatch>
-  <filesmatch "\\.(js)$">
-    Header set Cache-Control "max-age=604800, private"
-  </filesmatch>
-
+  ExpiresByType image/svg+xml "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/png "access plus 1 year"
+  ExpiresByType image/vnd.microsoft.icon "access plus 1 year"
+  ExpiresByType font/woff "access plus 1 year"
+  ExpiresByType font/woff2 "access plus 1 year"
 </IfModule>
 
 
@@ -91,6 +82,7 @@ RewriteRule ^(.*) index.php [L]
 <IfModule mod_deflate.c>
   AddOutputFilterByType DEFLATE text/plain
   AddOutputFilterByType DEFLATE text/html
-  AddOutputFilterByType DEFLATE text/javascript
+  AddOutputFilterByType DEFLATE application/javascript
+  AddOutputFilterByType DEFLATE text/css
   AddOutputFilterByType DEFLATE image/x-icon
 </IfModule>
